syntax = "proto3";

package actionpb;

option go_package = "./actionpb";

import "common.proto";

message ImplementRequest {
    ImplementArgs ImplementArgs = 1;
}
message ImplementArgs {
  string mission = 1;
  string plan = 2;
  repeated Change changes = 3;
}
message Change {
  string task = 1;
  string fileIn = 2;
  string fileOut = 3;
  string code = 4;
  repeated string inspirationFiles = 5;
}
message ImplementResponse {
    repeated FileWrite fileWrites = 1;
}



